# pdf-extraction

./: .env.example  .gitignore  Dockerfile  Makefile  PHASE1_STATUS.md  PHASE2_OCR_IMPLEMENTATION.md  PHASE3_LLM_INTEGRATION.md  PHASE4_COORDINATE_MAPPING.md  PHASE5_EXPORT_VALIDATION.md  PHASE6_TESTING_DEPLOYMENT.md  PHASE7_PRODUCTION_SCALING.md  QUICKSTART.md  README.md  SERVICES_SETUP.md  docker-compose.services.yml  logging.ini  pyproject.toml  setup-services.sh
alembic/: env.py
alembic/versions/: 2026_01_21_2043-562c9f4e9d9f_initial_migration_for_tables_jobs_.py
app/: config.py  main.py
app/api/: dependencies.py
app/api/routes/: data.py  download.py  status.py  upload.py
app/db/: session.py
app/models/: database.py  schemas.py
app/services/llm/: base.py  claude.py  gemini.py
app/services/ocr/: base.py  factory.py  textract.py
app/utils/: s3.py
app/workers/: celery_app.py  tasks.py
scripts/: init_db.py  setup_localstack.py
src/: main.py
src/api/: __init__.py  dependencies.py
src/api/routes/: __init__.py  data.py  download.py  status.py  upload.py
src/core/: __init__.py  ctx_vars.py  logger.py  settings.py
src/db/: __init__.py
src/middlewares/: __init__.py
src/models/: __init__.py  base.py  database.py  schemas.py
src/services/: __init__.py  processing.py
src/services/llm/: base.py  claude.py  gemini.py
src/services/ocr/: base.py  factory.py  tesseract.py  textract.py
src/utils/: __init__.py  s3.py
src/workers/: celery_app.py  tasks.py
tests/: conftest.py
